# Unsupervised-KNN-JS

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  build.sh  package-lock.json  package.json
lib/: index.js  knn.js
lib/src/: index.js
lib/src/distances/: distance_algos.js
lib/src/knn_utils/: distance_computation.js  model.js
native/: Cargo.toml
native/src/: distance_computation.rs  knn.rs  lib.rs
native/src/conversions/: mod.rs  to_js.rs  to_rust.rs
native/src/distances/: distance_algos.rs  mod.rs  vector_utils.rs
native/src/knn_utils/: distance_computation.rs  knn.rs  mod.rs
tests/: knn.test.js  setup.test.js
tests/distance_tests/: euclidean.test.js
