[package]
name = "unsupervised-knn-js"
version = "1.0.0"
authors = ["houtanf"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "unsupervised_knn"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
num = "0.2"
rayon = "1.1"
